--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,11 +2,17 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Workflow Tool</title>
+    <meta name="theme-color" content="#007BFF" />
+    <title>Workflow Tool - Build AI Workflows</title>
+    <meta name="description" content="Visual workflow builder with AI, Web3, and automation nodes." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
-  <body class="h-full">
+  <body class="h-full bg-gray-50 dark:bg-gray-900">
     <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
